# TodosWeb

./: .env  .env.example  .gitignore  Dockerfile  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 52becb621157_check_for_new_changes.py  8f9c3467feb1_create_initial_tables_and_include_phone_.py  fbc1c9cc4138_initial_migration.py
modules/auth_modules/: auth_crud.py  auth_schemas.py  auth_utils.py
modules/todos_modules/: todo_crud.py  todo_schemas.py
routers/: admin.py  auth.py  todos.py  users.py
services/: initial_setup.py
static/js/: base.js
templates/: add-todo.html  admin_todos.html  admin_users.html  change_password.html  edit-todo.html  error_forbidden.html  forgot_password.html  home.html  layout.html  login.html  navbar.html  register.html  reset_password.html  todo.html  user_profile.html
