[project]
name = "docker-todos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt==3.2.0",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "jose>=1.0.0",
    "numpy>=2.3.1",
    "passlib[bcrypt]==1.7.3",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
]
